06_core/core/core.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  namespace: ops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      restartPolicy: Always
      containers:
      - name: core
        image: lechaterrant/ops-core:latest
