06_core/core/core.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: core-ingress
  namespace: ops
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  -  http:
      paths:
      - path: /core
        backend:
          serviceName: core-service
          servicePort: http
